--- a/MobilePOS/res/layout/sale_main.xml
+++ b/MobilePOS/res/layout/sale_main.xml
@@ -51,14 +51,12 @@
          android:orientation="horizontal" >
 
           <TextView
-                   android:id="@+id/sale_main_t_cart"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Cart"
-                   android:textAppearance="?android:attr/textAppearanceMedium" 
-                    android:textSize="30sp"/>
-       
-
+              android:id="@+id/sale_main_t_cart"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Sale List"
+              android:textAppearance="?android:attr/textAppearanceMedium"
+              android:textSize="30sp" />
              
     </LinearLayout>
     	
