add ScannerProduct class     IntentIntegrator class     IntentResult class

--- a/MobilePOS/res/layout/inventory_additem.xml
+++ b/MobilePOS/res/layout/inventory_additem.xml
@@ -51,7 +51,7 @@
                 android:text="Check" />
 
             <Button
-                android:id="@+id/scan_button"
+                android:id="@+id/buttonScan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/scan" />
@@ -62,7 +62,7 @@
 		        android:layout_height="wrap_content"
 		        android:textIsSelectable="true"
 		        android:layout_centerHorizontal="true"
-		        android:layout_below="@id/scan_button" /> 
+		        android:layout_below="@id/buttonScan" /> 
         
         	<TextView
 		        android:id="@+id/scan_content"
